@@ -1,3 +1,7 @@
+Mon Dec 14 13:21:32 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* lib/open3.rb (Open3#popen3): fixed and improved rdoc.  [ruby-core:25658]
+
 Mon Dec 14 13:09:01 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* configure.in (LIBPATHFLAG): use numbered specifier if RPATHFLAG
